Added npm run build & gh-pages deploy

--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-
   "name": "turing-tested-flags",
   "description": "",
-
   "version": "1.0.0",
 
   "scripts": {
-    "start": "npx parcel serve src/index.pug"
+    "start": "npx parcel serve src/index.pug --dist-dir build/",
+    "build": "npx parcel build src/index.pug --dist-dir build/"
   },
 
   "author": "Denperidge",
   "license": "SEE LICENSE IN LICENSE",
 
   "devDependencies": {
-    "parcel": "^2.8.3",
-    "@parcel/transformer-pug": "^2.8.3"
+    "@parcel/transformer-pug": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "parcel": "^2.8.3"
   }
+
 }
+
