Project rename, added thanks to in README.md

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "turing-tested-flags",
-  "description": "",
+  "name": "pride-flag-typers",
+  "description": "Create the most beautiful or horrid pride flags you can imagine, the world is your oyster!",
   "version": "1.0.0",
 
   "scripts": {
