Thanks to now loaded into site, implemented scss

--- a/package.json
+++ b/package.json
@@ -2,20 +2,16 @@
   "name": "pride-flag-typers",
   "description": "Create the most beautiful or horrid pride flags you can imagine, the world is your oyster!",
   "version": "1.0.0",
-
   "scripts": {
     "start": "npx parcel serve src/index.pug --dist-dir build/",
     "build": "npx parcel build src/index.pug --dist-dir build/"
   },
-
   "author": "Denperidge",
   "license": "SEE LICENSE IN LICENSE",
-
   "devDependencies": {
     "@parcel/transformer-pug": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
+    "jstransformer-markdown-it": "^3.0.0",
     "parcel": "^2.8.3"
   }
-
 }
-
